...
        }}
      />
      <Tabs.Screen
        name="jobs/index"
        options={{
          title: 'My Jobs',
          tabBarButtonTestID: 'tab-vendor-jobs',
          tabBarIcon: ({ color, size }) => <Ionicons name="hammer" size={size} color={color} />,
        }}
      />
      <Tabs.Screen
        name="earnings/index"
        options={{
...
